# job-posting-gui-tool

./: README.en.md  README.md  README.zh-CN.md  pyproject.toml
src/job_posting_cli/: __init__.py  cli.py  gui.py  url_export.py  xlsx.py
tests/: test_clean.py  test_collect.py
