[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "job-posting-gui-tool"
version = "0.3.1"
description = "GUI-first Python tool for collecting, cleaning, filtering, and reporting job postings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ironping794-creator" }]
dependencies = ["openpyxl>=3.1"]
keywords = ["jobs", "recruitment", "scraping", "csv", "xlsx", "cli", "gui"]

[project.scripts]
job-postings = "job_posting_cli.cli:main"
job-postings-gui = "job_posting_cli.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
